nico/css/style.css
* {
  margin: 0;
  padding: 0;
  font-family: sans-serif;
  box-sizing: border-box;
}

a, a:hover, a:active, a:link, a:visited {
  text-decoration: none;
}

h2{
  margin: 15px 0;
}
h3 {
  margin: 10px 0;
}



/*
  Dunkles Grau mit Blau ton: #93a7c6
  Helles Grau mit Blau ton: #a9c1e5
  Sehr helles Grau: #727272
  */

/* Navigation start */

body {
  padding-top: 39px;
  background-color: #727272;
}

#topmbl {
  text-align: center;
  border-bottom: 2px solid #727272;
  position: fixed;
  width: 100%;
  background-color: white;
  margin-top: -39px;
  color: #727272;
}

#nav {
  padding-top: 1em;
  display: block;
  position: fixed;
  height: 100%;
  width: 100%;
  z-index: 2;
  text-align: center;
  transition: all .3s ease-in-out;
  border-right: 2px solid #727272;
  background-color: white;
  overflow-y: scroll;
  color: #727272;
}

#nav li {
  list-style: none;
}

.navbtn {
  display: block;
  border: 1px solid #727272;
  padding: 10px 2px;
  margin: 5px auto;
  border-radius: 7px;
  width: 80%;
  color: #727272;
  transition: all .3s linear;
}
.navbtn:hover {
  border-color: #93a7c6;
  color: #93a7c6;
}
.navbtn:active {
  border-color: #a9c1e5;
  color: #a9c1e5;
}

#closebtn {
  padding-left: 20px;
  border-color: red;
  color: red;
  text-align: left;
}

.open {
  left: 0;
}
.hide {
  left: -100%;
}

/* Navigation end */

/* Content start */

#content {
  padding: 1em;
  color: white;
  height: 100%;
}

#hdrimg {
  width: 100%;
}
#content p {
  padding-left: 10px;
  font-weight: 600;
}
#content ul{
  padding-left: 30px;
  font-weight: 600;
}
#content h3{
  padding-left: 10px;
}
.jrnbild {
  display: block;
  margin-left: 10px;
  width: 80%;
}

.border {
  border: 1px solid white;
  padding-bottom: 10px;
}
/* Content end */

/* media queries */

@media screen and (min-width: 700px) {

  body {
    padding: 0 0 0 150px;
  }

  #topmbl {
    display: none;
  }
  .hide {
    left: 0;
  }
  #nav {
    width: 150px;
    overflow: hidden;
  }
  #closebtn {
    display: none;
  }
  #hdrimgdiv {
    height: 20em;
    overflow: hidden;
  }

  #hdrimg {
    width: 120%;
    vertical-align: middle;
    position: relative;
    z-index: 1;
    bottom: 35%;
    left: -5%;
  }
  #content {
    z-index: 2;
  }

}


@media screen and (min-width: 950px) {

  #hdrimgdiv {
    height: 30em;
  }
}


@media screen and (min-width: 1200px) {


  body {
    padding-left: 150px;
  }
  #hdrimgdiv {
    float: right;
    width: 25em;
    height: 25em;
    border-radius: 50px;
    position: absolute;
    left: 700px;
    margin-top: 20px;
    border: 2px solid #a9c1e5;
  }
  #hdrimg {
    width: 200%;
    left: -25%;
    bottom: 30%;
  }
  #content {
    width: 550px;
  }
}

